[ bug fix ][ balloon ] Fix balloon position bug on iPhone

--- a/editor-css/_editor_before_balloon.scss
+++ b/editor-css/_editor_before_balloon.scss
@@ -1,3 +1,8 @@
+.wp-block[data-type="vk-blocks/balloon"]::after{
+	content: "";
+	display: block;
+	clear: both;
+}
 .icon-image-list {
 	display: flex;
 	flex-wrap: wrap;
